5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1807_2573.log
== TEST (2019-06-11 17:34:05) 
-- CODE:
from numpy import *
massa = array(eval('Diite o seu peso:   '))
altura = array(eval('Diite o seu peso:   '))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i]=massa[i]/(altura[i]**2)
	print(imc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:35:03) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu peso:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i]=massa[i]/(altura[i]**2)
	print(imc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:36:06) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i]=massa[i]/(altura[i]**2)
	print(imc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:36:45) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i]=massa[i]/(altura[i]**2)
	print(round(imc,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:37:20) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i]=massa[i]/(altura[i]**2)
print(round(imc,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:38:07) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i]=massa[i]/(altura[i]**2)
print(imc)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:43:28) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(imc)
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(imc)
	
	


-- EXECUTION TIME:
0.810747
-- ERROR:
  File "/home/codebench/codes/1807/2573/main.py", line 9
    if(imc)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:47:49) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(imc)
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(imc< 17):
	print("muito abaixo do peso")
elif(17<=icms< 18,49):
	print("abaixo do peso")
elif(18,5<=icms< 24,99):
	print("peso normal")
elif(25<=icms< 29,99):
	print("acima do normal")
elif(30<=icms< 34,99):
	print("obesidade)
elif(35<=icms<39,99):
	print("peso normal")
elif(35<=icms<39,99):
	print("obesidade severa")
else:
	print("obesidade morbida")

			


	
	
	


-- ERROR:
File "XXXX", line 18
    print("obesidade)
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:48:01) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(imc)
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(imc< 17):
	print("muito abaixo do peso")
elif(17<=icms< 18,49):
	print("abaixo do peso")
elif(18,5<=icms< 24,99):
	print("peso normal")
elif(25<=icms< 29,99):
	print("acima do normal")
elif(30<=icms< 34,99):
	print("obesidade")
elif(35<=icms<39,99):
	print("peso normal")
elif(35<=icms<39,99):
	print("obesidade severa")
else:
	print("obesidade morbida")

			


	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:49:15) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(imc)
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(imc <17):
	print("muito abaixo do peso")
elif(17<=icms< 18,49):
	print("abaixo do peso")
elif(18,5<=icms< 24,99):
	print("peso normal")
elif(25<=icms< 29,99):
	print("acima do normal")
elif(30<=icms< 34,99):
	print("obesidade")
elif(35<=icms<39,99):
	print("peso normal")
elif(35<=icms<39,99):
	print("obesidade severa")
else:
	print("obesidade morbida")

			


	
	
	


-- EXECUTION TIME:
1.11714
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 9, in <module>
    if(imc <17):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:53:36) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(imc)
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- EXECUTION TIME:
1.17061
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.60752934  0.          0.          0.        ]
O MAIOR IMC DA TURMA EH: 24.607529340039623
[24.60752934 22.99444707  0.          0.        ]
O MAIOR IMC DA TURMA EH: 24.607529340039623
[24.60752934 22.99444707 19.13007284  0.        ]
O MAIOR IMC DA TURMA EH: 24.607529340039623
[24.60752934 22.99444707 19.13007284 20.15894905]
O MAIOR IMC DA TURMA EH: 24.607529340039623
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[8.84348536 0.         0.        ]
O MAIOR IMC DA TURMA EH: 8.843485358636874
[ 8.84348536 12.95269353  0.        ]
O MAIOR IMC DA TURMA EH: 12.952693526482573
[ 8.84348536 12.95269353 17.4432758 ]
O MAIOR IMC DA TURMA EH: 17.443275802877565
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79247016  0.        ]
O MAIOR IMC DA TURMA EH: 37.792470156106525
[37.79247016 31.87781289]
O MAIOR IMC DA TURMA EH: 37.792470156106525
ABAIXO DO PESO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:53:41) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(imc)
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:54:51) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(round(imc,2))
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- EXECUTION TIME:
1.1207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 7, in <module>
    print(round(imc,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:54:52) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(round(imc,2))
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:55:19) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(round(imc,2))
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:55:34) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
	print(imc)
	print('O MAIOR IMC DA TURMA EH:',max(imc))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:57:55) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print('O MAIOR IMC DA TURMA EH:',max(imc))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:58:56) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print(around('O MAIOR IMC DA TURMA EH:',max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- EXECUTION TIME:
1.17139
-- ERROR:
Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 56, in _wrapfunc
    return getattr(obj, method)(*args, **kwds)
AttributeError: 'str' object has no attribute 'round'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 8, in <module>
    print(around('O MAIOR IMC DA TURMA EH:',max(imc),2))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 3007, in around
    return _wrapfunc(a, 'round', decimals=decimals, out=out)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 66, in _wrapfunc
    return _wrapit(obj, method, *args, **kwds)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 46, in _wrapit
    result = getattr(asarray(obj), method)(*args, **kwds)
TypeError: integer argument expected, got float

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:59:20) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print(around('O MAIOR IMC DA TURMA EH:',max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:00:56) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print(around('O MAIOR IMC DA TURMA EH:',max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("peso normal")
elif(25<=max(imc)<= 29,99):
	print("acima do normal")
elif(30<=max(imc)<= 34,99):
	print("obesidade")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
	


-- EXECUTION TIME:
1.14843
-- ERROR:
Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 56, in _wrapfunc
    return getattr(obj, method)(*args, **kwds)
AttributeError: 'str' object has no attribute 'round'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 8, in <module>
    print(around('O MAIOR IMC DA TURMA EH:',max(imc),2))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 3007, in around
    return _wrapfunc(a, 'round', decimals=decimals, out=out)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 66, in _wrapfunc
    return _wrapit(obj, method, *args, **kwds)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 46, in _wrapit
    result = getattr(asarray(obj), method)(*args, **kwds)
TypeError: integer argument expected, got float

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:02:23) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print(around('O MAIOR IMC DA TURMA EH:',max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
1.03332
-- ERROR:
Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 56, in _wrapfunc
    return getattr(obj, method)(*args, **kwds)
AttributeError: 'str' object has no attribute 'round'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 8, in <module>
    print(around('O MAIOR IMC DA TURMA EH:',max(imc),2))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 3007, in around
    return _wrapfunc(a, 'round', decimals=decimals, out=out)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 66, in _wrapfunc
    return _wrapit(obj, method, *args, **kwds)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 46, in _wrapit
    result = getattr(asarray(obj), method)(*args, **kwds)
TypeError: integer argument expected, got float

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:02:59) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",around(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
1.12831
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
Diite o seu peso:   Diite o seu altura:   [37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
ABAIXO DO PESO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:03:14) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",around(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
1.04176
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
ABAIXO DO PESO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:03:27) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print(around("O MAIOR IMC DA TURMA EH:",around(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
0.642959
-- ERROR:
  File "/home/codebench/codes/1807/2573/main.py", line 9
    if(max(imc) <17):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:03:45) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",around(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
1.09669
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
ABAIXO DO PESO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:06:43) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",around(max(imc),2))
if(max(imc) <17):-
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
File "XXXX", line 9
    if(max(imc) <17):-
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:07:16) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
1.01008
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
ABAIXO DO PESO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:07:45) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")
elif(35<=max(imc)<=39,99):
	print("P")
elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:08:49) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
0.857538
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
Diite o seu peso:   Diite o seu altura:   [37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
ABAIXO DO PESO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:09:10) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("BESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:12:09) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
1.16309
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
ABAIXO DO PESO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:12:18) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:13:30) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
1.10567
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
ABAIXO DO PESO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:13:33) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:15:59) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:18:02) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:18:35) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:19:24) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc) <17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) <= 18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) <=24,99):
	print("PESO NORMAL")
elif(25<=max(imc)<= 29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)<= 34,99):
	print("OBESIDADE")

elif(35<=max(imc)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:25:33) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) and max(imc) <=18,49):
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) and max(imc) <= 24,99):
	print("PESO NORMAL")
elif(25<=max(imc)and max(imc) <=29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)and max(imc) <= 34,99):
	print("OBESIDADE")
elif(35<=max(imc) and max(imc) <=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:28:17) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) and max(imc) <=18,49):
	print(max(imc))
	print("ABAIXO DO PESO")
elif(18,5 <= max(imc) and max(imc) <= 24,99):
	print("PESO NORMAL")
elif(25<=max(imc)and max(imc) <=29,99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)and max(imc) <= 34,99):
	print("OBESIDADE")
elif(35<=max(imc) and max(imc) <=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:30:24) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) and max(imc) <=18.49):
	print("ABAIXO DO PESO")
elif(18.5 <= max(imc) and max(imc) <= 24.99):
	print("PESO NORMAL")
elif(25<=max(imc)and max(imc) <=29.99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)and max(imc) <= 34.99):
	print("OBESIDADE")
elif(35<=max(imc) and max(imc) <=39.99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:31:04) 
-- CODE:
from numpy import *
massa=array(eval(input('Diite o seu peso:   ')))
altura = array(eval(input('Diite o seu altura:   ')))
imc=zeros(size(massa))
for i in range(size(massa)):
	imc[i] = massa[i] / (altura[i]*altura[i])
print(around(imc,2))
print("O MAIOR IMC DA TURMA EH:",round(max(imc),2))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<= max(imc) and max(imc) <=18.49):
	print("ABAIXO DO PESO")
elif(18.5 <= max(imc) and max(imc) <= 24.99):
	print("PESO NORMAL")
elif(25<=max(imc)and max(imc) <=29.99):
	print("ACIMA DO NORMAL")
elif(30<=max(imc)and max(imc) <= 34.99):
	print("OBESIDADE")
elif(35<=max(imc) and max(imc) <=39.99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

			


	
	
-- EXECUTION TIME:
0.971813
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
